tests/errors/macros/too_many_args.ark
!{foo (a b c)
    (+ a b c)}

(foo 1 2 3 4)